--- a/EDA_human_temperature/sliderule_dsi_inferential_statistics_exercise_1.ipynb
+++ b/EDA_human_temperature/sliderule_dsi_inferential_statistics_exercise_1.ipynb
@@ -242,7 +242,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data appears to be approximately normal, but slightly right-skewed. The boxplot of the data shows the temperature data is fairly symmetric. To confirm that the data is indeed normal, construct a normal probability plot."
+    "The data appears to be approximately normal, but slightly right-skewed. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NormaltestResult(statistic=2.7038014333192031, pvalue=0.2587479863488254)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.normaltest(df.temperature)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The p-value of 25% shows no statistically significant difference from a normal distribution."
    ]
   },
   {
@@ -314,7 +341,87 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## test whether sample mean is 98.6?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a two-sided test for the null hypothesis that the expected value (mean) of a sample of independent observations a is equal to the given population mean, popmean."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=-5.4548232923645195, pvalue=2.4106320415561276e-07)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_1samp(df.temperature, 98.6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "T test shows population mean is NOT equal to 98.6 with a p-value of 2.4106320415561276e-07 if the population mean were 98.6, less than 1 in 1 million chance the sample mean would differ this far from 98.6 by random chance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## test whether male and female have different body temperatures?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "male = df[df.gender == 'M']\n",
+    "female = df[df.gender == 'F']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-2.2854345381656103, pvalue=0.023931883122395609)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_ind(male.temperature, female.temperature)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "T test shows they are different with a p-value of 2%, i.e., 2% chance the samples would differ this much by chance if the population means were equal."
+   ]
   }
  ],
  "metadata": {
