--- a/EDA_racial_discrimination/sliderule_dsi_inferential_statistics_exercise_2.ipynb
+++ b/EDA_racial_discrimination/sliderule_dsi_inferential_statistics_exercise_2.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "[5 rows x 65 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "w     2200  235"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "0.080492813141683772"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "[[157.0, 235.0], [2278.0, 2200.0]]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "(0.64520949694580909, 2.3793735539510017e-05)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -548,24 +548,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
-    "se_w = np.sqrt(wppl*(1-wppl)/ppl.size+nowppl*(1-nowppl)/noppl.size)\n",
-    "se_b = np.sqrt(bppl*(1-bppl)/ppl.size+nobppl*(1-nobppl)/noppl.size)"
+    "se_w = (wppl* (1-wppl) / ppl.size + nowppl * (1-nowppl) / noppl.size) ** 5\n",
+    "se_b = (bppl* (1-bppl) / ppl.size + nobppl * (1-nobppl) / noppl.size) ** 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0258518103505\n"
+      "1.33324392256e-16\n"
      ]
     }
    ],
@@ -575,14 +575,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0258518103505\n"
+      "1.33324392256e-16\n"
      ]
     }
    ],
@@ -599,11 +599,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'call'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-113-3585dbd5c9d9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mttest_ind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mppl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcall\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnoppl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcall\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   3079\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3080\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3081\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3082\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3083\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'call'"
+     ]
+    }
+   ],
    "source": [
-    "stats.proportion.proportions_ztest(wppl.call, bppl.call)"
+    "stats.ttest_ind(ppl.call, noppl.call)"
    ]
   },
   {
