adding naive bayes

--- a/EDA_racial_discrimination/sliderule_dsi_inferential_statistics_exercise_2.ipynb
+++ b/EDA_racial_discrimination/sliderule_dsi_inferential_statistics_exercise_2.ipynb
@@ -344,37 +344,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "calls = data[['race', 'call']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.080492813141683772"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n = len(calls)\n",
-    "pooled = sum(calls.call) / n\n",
-    "pooled"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -383,35 +352,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Black call back 157.00 and White call back is 235.00\n"
+      "Total Resumes: 4870\n",
+      "Total Resumes: 2435\n",
+      "Total Resumes: 2435\n"
      ]
     }
    ],
    "source": [
-    "# number of callbacks for black-sounding and white names\n",
-    "print('Black call back %3.2F and White call back is %3.2F' % (sum(data[data.race=='b'].call), \n",
-    "                                                              sum(data[data.race=='w'].call)))"
+    "print('Total Resumes: '+str(len(data)))\n",
+    "print('Total Resumes: '+str(len(data[data['race']=='b'])))\n",
+    "print('Total Resumes: '+str(len(data[data['race']=='w'])))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can compare the porportion of black and white between the group with callback and the group callback. This two sampleing test should non-pairing because the members in the callback group is not related to the members in the non-callback group.\n",
-    "\n",
-    "We can use this test because it meets the criteria.\n",
-    "\n",
-    "   - Sampling within group and between group to be random and less than 10% of population.\n",
-    "   - There are more than 10 successes and failures cases - Black callback total 157 while white callback is 235.\n",
-    "        \n",
-    "Based on the citeria above, the distribution is deemed to be normal and CLT should be applied for this test. "
+    "We have a nice large sample size here, that is perfectly even in its two sample split. Also, two sample test is what's called for in this instance."
    ]
   },
   {
@@ -425,51 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Null: white and black have the same probability of callback \n",
-    "Alternate: white-sounding candidates have higher probability"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[157.0, 235.0], [2278.0, 2200.0]]"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a, b = sum(data[data.race=='b'].call), sum(data[data.race=='w'].call)\n",
-    "c, d = len(data[data.race=='b']) - a, len(data[data.race=='w']) - b\n",
-    "cont = [[a, b], [c, d]]\n",
-    "cont"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.64520949694580909, 2.3793735539510017e-05)"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stats.fisher_exact(cont, alternative='less')"
+    "The null hypothesis (H_0) is that there is no difference in the two proportions. The alternative hypothesis (H_A) is that there is difference in the proportion of resumes that received callbacks, based on race."
    ]
   },
   {
@@ -480,152 +400,110 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here I'll be setting up an confidence interval to differation the proportion of callbacks between the black(bppl) and white(wppl) applicants. First, calculate a standard error, based on the sample proportions"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ppl = data.race[data.call == 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "noppl = data.race[data.call == 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wppl:  0.599489795918\n",
-      "nowppl:  0.491290754801\n"
+      "Black Mean: 0.064476.\n",
+      "White Mean: 0.096509\n",
+      "Diff of Mean: -0.032033.\n"
      ]
     }
    ],
    "source": [
-    "wppl = sum(ppl == 'w') / float(ppl.size)\n",
-    "nowppl = sum(noppl == 'w') / float(noppl.size)\n",
-    "print('wppl: ', wppl)\n",
-    "print('nowppl: ', nowppl)"
+    "black = data[data['race']=='b']\n",
+    "white = data[data['race']=='w']\n",
+    "\n",
+    "print('Black Mean: {:3f}.'.format(black['call'].mean()))\n",
+    "print('White Mean: {:3f}'.format(white['call'].mean()))\n",
+    "print('Diff of Mean: {:3f}.'.format(black['call'].mean() - white['call'].mean()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bppl:  0.400510204082\n",
-      "nobppl:  0.508709245199\n"
+      "t-statistic: -4.11 | p-value: 0.00004\n"
      ]
     }
    ],
    "source": [
-    "bppl = sum(ppl == 'b') / float(ppl.size)\n",
-    "nobppl = sum(noppl == 'b') / float(noppl.size)\n",
-    "print('bppl: ', bppl)\n",
-    "print('nobppl: ', nobppl)"
+    "sample = stats.ttest_ind(black['call'], white['call'])\n",
+    "print('t-statistic: %.2f | p-value: %.5f' % sample)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "se_w = (wppl* (1-wppl) / ppl.size + nowppl * (1-nowppl) / noppl.size) ** 5\n",
-    "se_b = (bppl* (1-bppl) / ppl.size + nobppl * (1-nobppl) / noppl.size) ** 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.33324392256e-16\n"
+      "CI between -0.047 and -0.017\n"
      ]
     }
    ],
    "source": [
-    "print(se_w)"
+    "import statsmodels.stats.api as sms\n",
+    "cm = sms.CompareMeans(sms.DescrStatsW(black['call']), sms.DescrStatsW(white['call']))\n",
+    "print('CI between %.3f and %.3f' % cm.tconfint_diff(usevar='unequal'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.33324392256e-16\n"
+      "The margin of error is 0.015.\n"
      ]
     }
    ],
    "source": [
-    "print(se_b)"
+    "print('The margin of error is {:.3f}.'.format((black['call'].mean() - white['call'].mean())\n",
+    "                                              - cm.tconfint_diff(usevar = 'unequal')[0]))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see tha"
+    "## 4. Write a story describing the statistical significance in the context or the original problem.¶"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 113,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Series' object has no attribute 'call'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-113-3585dbd5c9d9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mttest_ind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mppl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcall\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnoppl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcall\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   3079\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3080\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3081\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3082\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3083\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'call'"
-     ]
-    }
-   ],
    "source": [
-    "stats.ttest_ind(ppl.call, noppl.call)"
+    "To perform a statistical analysis on whether race has a significant impact on the rate of callbacks for resumes, we will use the difference between two proportions. The first proportion is the proportion of resumes with black-sounding names that received a call back, and the second proportion is for resumes with white-sounding names that received a call back."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "data.head()"
+    "## 5. Does your analysis mean that race/name is the most important factor in callback success? Why or why not? If not, how would you amend your analysis?¶"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yes, since the p-value is much smaller than the significance level (0.05), there is convincing evidence to reject the null hypothesis. Therefore, there was a statistically significant difference in the proportions of resumes that received callbacks between the two races examined in this study."
    ]
   },
   {
